--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -79,7 +79,14 @@
     }
   },
   "notice": {
-    "noticeBoard": "Tablica ogłoszeń"
+    "title": "Tablica ogłoszeń",
+    "create": {
+      "title": "Dodaj ogłoszenie",
+      "placeholder": {
+        "name": "Tytuł",
+        "content": "Treść"
+      }
+    }
   },
   "common": {
     "back": "Wróć",
@@ -194,9 +201,9 @@
         }
       },
       "placeholder": {
-        "category": "Kategoria przedmiotu...",
-        "class": "Klasa...",
-        "teacher": "Nauczyciel prowadzący..."
+        "category": "Kategoria przedmiotu",
+        "class": "Klasa",
+        "teacher": "Nauczyciel prowadzący"
       },
       "button": {
         "add": "Dodaj przedmiot"
@@ -262,6 +269,8 @@
     "SESSION_EXPIRED": "Sesja wygasła, zaloguj się ponownie.",
     "INCORRECT_EMAIL": "Niepoprawny format adresu email.",
     "EMAIL_REQUIRED": "Adres e-mail jest wymagany.",
+    "TITLE_REQUIRED": "Tytuł jest wymagany.",
+    "CONTENT_REQUIRED": "Treść jest wymagana.",
     "PASSWORD_REQUIRED": "Pole hasło nie może być puste.",
     "PASSWORD_TOO_SHORT": "Hasło jest zbyt krótkie.",
     "PASSWORD_TOO_LONG": "Hasło jest zbyt długie.",
