--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -84,8 +84,10 @@
       "title": "Create notice",
       "placeholder": {
         "name": "Title",
-        "content": "Message"
-      }
+        "content": "Message",
+        "publishTime": "Publishing time"
+      },
+      "publishInstantly": "Publish instantly"
     }
   },
   "common": {
@@ -286,6 +288,7 @@
     "Class_TEACHER_REQUIRED": "Select supervising teacher.",
     "SUBJECT_CATEGORY_REQUIRED": "Select subject category.",
     "SUBJECT_CLASS_REQUIRED": "Select this subject's class.",
-    "SUBJECT_TEACHER_REQUIRED": "Select lecturing teacher."
+    "SUBJECT_TEACHER_REQUIRED": "Select lecturing teacher.",
+    "PUBLISH_TIME_REQUIRED": "Publishing time must be given."
   }
 }
