feature: create notice (#42)

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -79,7 +79,19 @@
     }
   },
   "notice": {
-    "noticeBoard": "Notice board"
+    "title": "Notice board",
+    "create": {
+      "title": "Create notice",
+      "placeholder": {
+        "name": "Title",
+        "content": "Message",
+        "publishTime": "Publishing time"
+      },
+      "publishInstantly": "Publish instantly",
+      "toast": {
+        "success": "Utworzono ogłoszenie \"{{ name }}\""
+      }
+    }
   },
   "common": {
     "back": "Back",
@@ -190,9 +202,9 @@
         }
       },
       "placeholder": {
-        "category": "Subject category...",
-        "class": "Class...",
-        "teacher": "Lecturing teacher..."
+        "category": "Subject category",
+        "class": "Class",
+        "teacher": "Lecturing teacher"
       },
       "button": {
         "add": "Add new subject"
@@ -262,6 +274,8 @@
     "SESSION_EXPIRED": "You have been logged out.",
     "INCORRECT_EMAIL": "Incorrect email format.",
     "EMAIL_REQUIRED": "Email address is required.",
+    "TITLE_REQUIRED": "Title is required.",
+    "CONTENT_REQUIRED": "Content is required.",
     "PASSWORD_REQUIRED": "Password cannot be empty.",
     "PASSWORD_TOO_SHORT": "Password is too short.",
     "PASSWORD_TOO_LONG": "Password is too long.",
@@ -277,6 +291,7 @@
     "Class_TEACHER_REQUIRED": "Select supervising teacher.",
     "SUBJECT_CATEGORY_REQUIRED": "Select subject category.",
     "SUBJECT_CLASS_REQUIRED": "Select this subject's class.",
-    "SUBJECT_TEACHER_REQUIRED": "Select lecturing teacher."
+    "SUBJECT_TEACHER_REQUIRED": "Select lecturing teacher.",
+    "PUBLISH_TIME_REQUIRED": "Publishing time must be given."
   }
 }
