--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -292,6 +292,7 @@
     "SUBJECT_CATEGORY_REQUIRED": "Select subject category.",
     "SUBJECT_CLASS_REQUIRED": "Select this subject's class.",
     "SUBJECT_TEACHER_REQUIRED": "Select lecturing teacher.",
-    "PUBLISH_TIME_REQUIRED": "Publishing time must be given."
+    "PUBLISH_TIME_REQUIRED": "Publishing time must be given.",
+    "NOTICE_NOT_FOUND": "Notice not found"
   }
 }
