--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -292,6 +292,7 @@
     "SUBJECT_CATEGORY_REQUIRED": "Wybierz kategorię przedmiotu.",
     "SUBJECT_CLASS_REQUIRED": "Wybierz klasę, której przedmiot dotyczy.",
     "SUBJECT_TEACHER_REQUIRED": "Wybierz nauczyciela prowadzącego przedmiot.",
-    "PUBLISH_TIME_REQUIRED": "Określ datę publikacji."
+    "PUBLISH_TIME_REQUIRED": "Określ datę publikacji.",
+    "NOTICE_NOT_FOUND": "Nie znaleziono ogłoszenia"
   }
 }
