feature: Create Edit Notice view

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -91,6 +91,10 @@
       "toast": {
         "success": "Utworzono ogłoszenie \"{{ name }}\""
       }
+    },
+    "edit": {
+      "title": "Modify notice",
+      "tooltip": "Edit the title or content"
     }
   },
   "common": {
