feature: allow editing publish time if not yet published

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -97,6 +97,9 @@
       "tooltip": "Edit the title or content"
     }
   },
+  "tooltip": {
+    "alreadyPublished": "Notice is already published, cannot edit its publishing time."
+  },
   "common": {
     "back": "Back",
     "viewMore": "View more",
