--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -91,6 +91,13 @@
       "toast": {
         "success": "Utworzono ogłoszenie \"{{ name }}\""
       }
+    },
+    "edit": {
+      "title": "Modyfikuj ogłoszenie",
+      "tooltip": "Edytuj tytuł lub treść ogłoszenia"
+    },
+    "tooltip": {
+      "alreadyPublished": "Ogłoszenie jest już opublikowane, nie można zmienić daty publikacji."
     }
   },
   "common": {
@@ -106,7 +113,7 @@
     "homework": "Zadanie domowe",
     "test": "Test",
     "writtenBy": "Napisał(a) <1>{{ author }}</1>",
-    "publishedOn": "Opublikował(a) <1>{{ date }}</1>",
+    "publishedOn": "Opublikowano <1>{{ date }}</1>",
     "welcome": "Witaj",
     "student": "Uczeń",
     "teacher": "Nauczyciel",
